<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NTH Settings</string>
    <string name="answer_an_incoming_call">Answer an incoming call</string>
    <string name="answer_an_incoming_call_summary">During an incoming call, bring the phone to your ear to answer the call</string>
    <string name="battery_icon_list">Battery icon</string>
    <string name="cancel">Cancel</string>
    <string name="carrier_logo_summary">Leave it empty to show carrier name</string>
    <string name="carrier_logo_text">Logo text</string>
    <string name="carrier_logo_title">Show custom logo</string>
    <string name="clock_long_press">Clock: long press</string>
    <string name="clock_tap">Clock: tap</string>
    <string name="customization_category_pref">Customization</string>
    <string name="disable_pull_down">Disable pull down</string>
    <string name="disable_pull_down_summary">Disable status bar pull down on lock screen</string>
    <string name="double_home_title">Double tap Home</string>
    <string name="double_tap_on_home_screen">Double tap on home screen</string>
    <string name="edit_carrier_name_title">Edit logo text</string>
    <string name="hide_brightness_slider">Hide brightness slider</string>
    <string name="show_qslide_apps">Show Qslide Apps</string>
    <string name="information_category">Information</string>
    <string name="init_rec">2nd-init recovery</string>
    <string name="knock_off">Knock Off</string>
    <string name="knock_off_summary">Screen off when double tap on status bar, lockscreen or home screen</string>
    <string name="long_press_back_list_pref">Long press back</string>
    <string name="long_press_back_when_locked">Long press back when locked</string>
    <string name="long_press_back_when_locked_summary">To open torch</string>
    <string name="long_press_menu_list">Long press menu</string>
    <string name="long_press_menu_when_locked">Long press menu when locked</string>
    <string name="long_press_menu_when_locked_summary">To open camera</string>
    <string name="long_press_home_when_locked">Long press home when locked</string>
    <string name="long_press_home_when_locked_summary">To open torch</string>
    <string name="media_scan_summary">Disable run media scanner when boot completed</string>
    <string name="mini_toggle_qslide_pref">Mini toggle QSlide</string>
    <string name="mini_toggle_volume_slider_pref">Mini toggle volume slider</string>
    <string name="navigation_bar_header">Buttons</string>
    <string name="navigation_bar_title">Buttons</string>
    <string name="network_speed_interval_out_of_range">Interval time must be between 300ms and 10000ms</string>
    <string name="network_speed_update_interval_pref">Network speed update interval</string>
    <string name="no">No</string>
    <string name="on_lock_screen">On lock screen</string>
    <string name="other_settings_header">Other settings</string>
    <string name="status_bar_transparence">Status bar transparence</string>
    <string name="prevent_misoperation">Prevent misoperation</string>
    <string name="prevent_misoperation_summary">Prevent misoperation using proximity sensor</string>
    <string name="qbutton">QButton long press</string>
    <string name="reboot_header">Reboot</string>
    <string name="reboot_recovery_confirm_msg">"Where do you want to go?

CAUTION: if you choose Recovery without recovery installed, your data in /sdcard will be erased."</string>
    <string name="reboot_recovery_header">Reboot recovery</string>
    <string name="rec_par">Recovery</string>
    <string name="reload_systemui">Reload SystemUI</string>
    <string name="reload_systemui_header">Reload SystemUI</string>
    <string name="reload_systemui_reminder">"You have to reload SystemUI due to changes effected.
Reload SystemUI now?"</string>
    <string name="scan_media_title">Diable scan media</string>
    <string name="scan_media_trigger_summary">Scan media now</string>
    <string name="scan_media_trigger_title">Scan media</string>
    <string name="show_network_speed_pref">Show network speed</string>
    <string name="nthsettings_information">NTH Settings information</string>
    <string name="nthsettings_information_summary">%1$s v%2$s - nthung2112 - LGViet.com</string>
    <string name="soft_reboot_header">Soft reboot</string>
    <string name="status_bar_expanded_header">Status bar expanded</string>
    <string name="status_bar_expanded_title">Status bar expanded</string>
    <string name="status_bar_header">Status bar</string>
    <string name="status_bar_title">Status bar</string>
    <string name="swipe_status_bar">Swipe status bar</string>
    <string name="swipe_status_bar_summary">Swipe status bar to adjust brightness</string>
    <string name="tools_category_pref">Tools</string>
    <string name="volume_rocker_wake">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Allow pressing volume up or down to wake the phone on</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">\#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="clock_color">Clock Color</string>
    <string name="statusbar_icon">Statusbar icon</string>
    <string name="statusbar_icon_and_text">Statusbar icon and text</string>
    <string name="single_icon">Signal icon</string>
    <string name="wifi_icon">Wifi icon</string>
    <string name="single_style">Signal Style</string>
    <string name="title_batterybar">Statusbar Batterybar</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_cat">Battery bar options</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="title_clock_ampm_entries">AM/PM style</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="clock_title_enable">Clock style</string>
    <string name="battery_icon">Battery icon</string>
    <string name="volbtn_toggle_title">Music control when screen off</string>
    <string name="volbtn_vol_up_title">Volume up: long press</string>
    <string name="volbtn_vol_down_title">Volume down: long press</string>
    <string name="noti_zone_click">Notification zone: tap</string>
    <string name="noti_zone_long_press">Notification zone: long press</string>

</resources>