<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5.0dip"
    android:paddingRight="5.0dip" >

    <com.nth.settings.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="portrait" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="6.0dip"
        android:layout_marginRight="6.0dip"
        android:gravity="left"
        android:text="@string/press_color_to_apply"
        android:textAppearance="?android:textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40.0dip"
        android:layout_marginBottom="10.0dip"
        android:orientation="horizontal" >

        <com.nth.settings.colorpicker.ColorPickerPanelView
            android:id="@+id/old_color_panel"
            android:layout_width="0.0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:gravity="center"
            android:text="@string/arrow_right"
            android:textSize="20.0sp" />

        <com.nth.settings.colorpicker.ColorPickerPanelView
            android:id="@+id/new_color_panel"
            android:layout_width="0.0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/hex"
            android:textSize="20.0sp" />

        <EditText
            android:id="@+id/hex_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="6.0dip"
            android:layout_marginRight="6.0dip"
            android:hint="@string/hex_hint" />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set" />

        <Button
            android:id="@+id/ics_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ics_color" />
    </LinearLayout>

</LinearLayout>